--- a/demo/basic.html
+++ b/demo/basic.html
@@ -7,7 +7,7 @@
       <v-countup :start-value="1" :end-value="100"></v-countup>
     </div>
     <script src="https://cdn.bootcss.com/vue/2.3.4/vue.min.js"></script>
-    <script src="../../dist/vue-countup.js"></script>
+    <script src="../dist/vue-countup.js"></script>
     <script>
       Vue.use(VueCountUp)
       var template = ''
